overflow x hidden has been added to body. when i add this to *, the header and footer take up full width, but dropdowns no longer work because they aren't allowed to overflow

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
   overflow-x: hidden;
   margin: 0; 
   padding: 0; 
+  overflow-x: hidden;
 }
 
 table {
